add troubleshooting pages

--- a/PlatingCoating.html
+++ b/PlatingCoating.html
@@ -241,14 +241,14 @@
 
       <!-- Cyanide-Free White Bronze -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/ca4mSrD.jpeg" alt="ไวท์บรอนซ์ไม่ใช้ไซยาไนด์ Cyanide-Free White Bronze"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image0-22a7d2870f1bc4f83.jpeg" alt="ไวท์บรอนซ์ไม่ใช้ไซยาไนด์ Cyanide-Free White Bronze"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">White Bronze</span><span class="badge">Cyanide-Free</span></div>
           <h3 data-i18n-key="wb_title">ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์</h3>
           <p data-i18n-key="wb_desc">
             สูตรปลอดไซยาไนด์ ลดความเสี่ยงด้านสิ่งแวดล้อม/ความปลอดภัย ผิวขาวเงิน เงา กระจายตัวดี คุมง่าย ลดต้นทุนบำบัด เหมาะกับถังแขวน/ถังกลิ้ง และโลหะฐานหลากหลาย
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/cyanide-free-white-bronze" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="cyanide-free-white-bronze.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
