--- a/blackening.html
+++ b/blackening.html
@@ -194,7 +194,7 @@
           <div class="badge-row"><span class="badge">Cold Immersion</span><span class="badge">Uniform Finish</span></div>
           <h3 data-i18n-key="bc_title">รมดำสำหรับทองเหลือง/ทองแดง</h3>
           <p data-i18n-key="bc_desc">ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว.</p>
-          <a class="more" href="https://www.baumechemical.com/home/blackening/troubleshootingblackening" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -205,7 +205,7 @@
           <div class="badge-row"><span class="badge">Steel</span><span class="badge">Low-Temp</span></div>
           <h3 data-i18n-key="steel_title">รมดำสำหรับเหล็ก</h3>
           <p data-i18n-key="steel_desc">กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างเอฟเฟกต์ และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง.</p>
-          <a class="more" href="https://www.baumechemical.com/home/blackening/troubleshootingblackening" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -216,7 +216,7 @@
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Uniform Oxide</span></div>
           <h3 data-i18n-key="zinc_title">รมดำสำหรับสังกะสี</h3>
           <p data-i18n-key="zinc_desc">จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบสังกะสีหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.</p>
-          <a class="more" href="https://www.baumechemical.com/home/blackening/troubleshootingblackening" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -227,18 +227,18 @@
           <div class="badge-row"><span class="badge">Aluminium</span><span class="badge">Room-Temp</span></div>
           <h3 data-i18n-key="al_title">รมดำสำหรับอลูมิเนียม</h3>
           <p data-i18n-key="al_desc">สารเข้มข้นต้องเจือจาง ใช้ที่อุณหภูมิห้อง 15–27°C (ไม่เกิน 30°C) เพื่อหลีกเลี่ยงการกัดผิวมากเกินไป ให้ชั้นดำสม่ำเสมอบนอลูมิเนียม.</p>
-          <a class="more" href="https://www.baumechemical.com/home/blackening/troubleshootingblackening" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
       <!-- Patina -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/7dE8hhu.jpeg" alt="Patina solution"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image0-3ef39ee00701bff68.jpeg" alt="Patina solution"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Patina</span><span class="badge">Aged Look</span></div>
           <h3 data-i18n-key="patina_title">สารทำพาทินา (Patina)</h3>
           <p data-i18n-key="patina_desc">เร่งปฏิกิริยาออกซิเดชันบนผิวทองแดง/ทองเหลืองให้เกิดชั้นสีเขียวแบบธรรมชาติ เหมาะกับงานศิลป์ จิวเวลรี่ และสถาปัตยกรรม ลดเวลาจากหลายปีเหลือไม่กี่ชั่วโมง/วัน.</p>
-          <a class="more" href="https://www.baumechemical.com/home/blackening/troubleshootingpatina" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingpatina.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
