--- a/equipment.html
+++ b/equipment.html
@@ -40,7 +40,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Equipment",
-    "url":"https://www.baumechemical.com/home/equipment",
+    "url":"https://www.baumechemical.com/equipment",
     "description":"Lab reagents, analytical instruments, and plating line equipment for metal finishing."
   }
   </script>
@@ -178,7 +178,7 @@
             โดยทั่วไปจะใช้ในขั้นตอน เช่น การทดสอบความเข้มข้นของโลหะหนักในสารละลาย การวิเคราะห์ค่า pH หรือการตรวจหาสิ่งปนเปื้อนในผลิตภัณฑ์ รีเอเจนต์ต้องมีคุณภาพสูงและมีความแม่นยำในการใช้ เพื่อให้ผลทดสอบถูกต้องและนำไปปรับปรุงกระบวนการผลิตได้อย่างมีประสิทธิภาพ
             การเลือกรีเอเจนต์ที่มีมาตรฐานและคุณภาพสูงช่วยให้การวิเคราะห์ในห้องแล็บถูกต้องตามข้อกำหนด ผู้ใช้งานจึงได้รับข้อมูลที่เชื่อถือได้เพื่อนำไปพัฒนากระบวนการผลิตให้มีประสิทธิภาพและปลอดภัยยิ่งขึ้น
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/equipment/labchemicals" data-i18n-key="cta">ดูรายละเอียด</a>
+          <a class="more" href="labchemicals.html" data-i18n-key="cta">ดูรายละเอียด</a>
         </div>
       </article>
 
@@ -191,7 +191,7 @@
           <p data-i18n-key="c2_d">
             ในห้องปฏิบัติการทางวิทยาศาสตร์ โดยเฉพาะในอุตสาหกรรมชุบโลหะและการผลิตที่ต้องทำการทดสอบสารเคมีและวิเคราะห์สมบัติของวัสดุ เครื่องมือวิเคราะห์ถือเป็นหัวใจสำคัญเพื่อให้การทดสอบแม่นยำและมีประสิทธิภาพ ตัวอย่างเช่น เครื่อง Atomic Absorption Spectrometer (AAS) สำหรับวิเคราะห์โลหะหนักในสารละลาย เครื่องวัด pH เพื่อควบคุมสมบัติของสารละลาย เครื่องวัดค่าการนำไฟฟ้า (Conductivity Meter) เครื่อง UV-Vis Spectrophotometer สำหรับวิเคราะห์การดูดกลืนแสงของสารละลาย เครื่องไทเทรเตอร์เพื่อทดสอบและคำนวณความเข้มข้นของสารเคมีในสารละลาย และ Salt Spray Tester สำหรับทดสอบความทนการกัดกร่อนในสภาวะหมอกเกลือและความชื้นสูง เครื่องมือเหล่านี้ช่วยให้การวิเคราะห์มีความถูกต้องและเที่ยงตรง สนับสนุนการประกันคุณภาพและการพัฒนากระบวนการผลิต
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/equipment/toolschemical" data-i18n-key="cta">ดูรายละเอียด</a>
+          <a class="more" href="toolschemical.html" data-i18n-key="cta">ดูรายละเอียด</a>
         </div>
       </article>
 
@@ -204,7 +204,7 @@
           <p data-i18n-key="c3_d">
             ในการชุบโลหะและการเคลือบผิว ต้องใช้อุปกรณ์ที่ควบคุมได้อย่างแม่นยำเพื่อให้กระบวนการเกิดผลตามต้องการ อุปกรณ์ที่ใช้ประกอบด้วย ถังชุบสำหรับบรรจุน้ำยาโดยควบคุมอุณหภูมิ ความเข้มข้น และ pH ของสารละลาย เรคติไฟเออร์ (Rectifier) สำหรับควบคุมกระแสไฟในกระบวนการชุบ เครื่องมือเฝ้าระวัง pH และอุณหภูมิสำหรับตรวจสอบค่าหน้างาน เครื่องวัดความหนาฟิล์มเคลือบหลังการชุบ ชุดจับยึดชิ้นงาน (Jigs & Fixtures) และเครื่องล้างอัลตราโซนิกสำหรับทำความสะอาดก่อน/หลังชุบ การคัดเลือกอุปกรณ์ที่เหมาะสมพร้อมการบำรุงรักษาอย่างสม่ำเสมอเป็นสิ่งจำเป็นต่อประสิทธิภาพของไลน์ชุบและคุณภาพของชิ้นงาน
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/equipment/platingequipment" data-i18n-key="cta">ดูรายละเอียด</a>
+          <a class="more" href="platingequipment.html" data-i18n-key="cta">ดูรายละเอียด</a>
         </div>
       </article>
     </div>
