--- a/passivation.html
+++ b/passivation.html
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Chromate on Zinc",
-    "url":"https://www.baumechemical.com/home/passivation",
+    "url":"https://www.baumechemical.com/passivation",
     "description":"Chromate conversion coating on zinc in Cr3/Cr6 variants with multiple finishes to enhance corrosion resistance and paint adhesion."
   }
   </script>
@@ -60,14 +60,14 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Blue (White) Chromate 3","url":"https://www.baumechemical.com/home/passivation/blue-passivation-on-zinc"},
-      {"@type":"ListItem","position":2,"name":"Black Chromate 3","url":"https://www.baumechemical.com/home/passivation/troubleshootingtrivalentchromeblack"},
-      {"@type":"ListItem","position":3,"name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/home/passivation/iridescent-passivation-on-zinc"},
-      {"@type":"ListItem","position":4,"name":"Yellow Chromate 3","url":"https://www.baumechemical.com/home/passivation/yellow-passivation-on-zinc"},
-      {"@type":"ListItem","position":5,"name":"Blue (White) Chromate 6","url":"https://www.baumechemical.com/home/passivation/troubleshootinghexavalentchromeblue"},
-      {"@type":"ListItem","position":6,"name":"Black Chromate 6","url":"https://www.baumechemical.com/home/passivation/troubleshootinghexavalentchromeblack"},
-      {"@type":"ListItem","position":7,"name":"Yellow Chromate 6","url":"https://www.baumechemical.com/home/passivation/yellow-6-passivation-on-zinc"},
-      {"@type":"ListItem","position":8,"name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/home/passivation/olive-6-passivation-on-zinc"}
+      {"@type":"ListItem","position":1,"name":"Blue (White) Chromate 3","url":"https://www.baumechemical.com/passivation/blue-passivation-on-zinc"},
+      {"@type":"ListItem","position":2,"name":"Black Chromate 3","url":"https://www.baumechemical.com/passivation/troubleshootingtrivalentchromeblack"},
+      {"@type":"ListItem","position":3,"name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/passivation/iridescent-passivation-on-zinc"},
+      {"@type":"ListItem","position":4,"name":"Yellow Chromate 3","url":"https://www.baumechemical.com/passivation/yellow-passivation-on-zinc"},
+      {"@type":"ListItem","position":5,"name":"Blue (White) Chromate 6","url":"https://www.baumechemical.com/passivation/troubleshootinghexavalentchromeblue"},
+      {"@type":"ListItem","position":6,"name":"Black Chromate 6","url":"https://www.baumechemical.com/passivation/troubleshootinghexavalentchromeblack"},
+      {"@type":"ListItem","position":7,"name":"Yellow Chromate 6","url":"https://www.baumechemical.com/passivation/yellow-6-passivation-on-zinc"},
+      {"@type":"ListItem","position":8,"name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/passivation/olive-6-passivation-on-zinc"}
     ]
   }
   </script>
@@ -201,7 +201,7 @@
             ใช้ได้กับซิงค์กรด/ด่าง และสูตรไม่ใช้ไซยาไนด์ ให้ฟ้าอมขาว ทน Salt Spray >96 ชม. (ที่ 5% v/v)
             ไม่มีโครเมียมหกวาเลนต์ (Cr6) เป็น Cr3 จึงเป็นมิตรต่อสิ่งแวดล้อมและดูแลง่าย กระบวนการทำงานไม่ซับซ้อน.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/blue-passivation-on-zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="blackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -215,7 +215,7 @@
             สำหรับซิงค์กรดและด่าง ฟิล์มดำสนิท เงาสวย ยิ่งทนเมื่อลงซีลแลคซ์ Barrel ทน White Rust ~48–72 ชม.,
             Rack ~72–96 ชม. เฉดเข้ม–อ่อนไล่ได้ตามเวลาแช่ อายุอ่างขึ้นกับปริมาณงานที่ลง.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/troubleshootingtrivalentchromeblack" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingtrivalentchromeblack.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -229,7 +229,7 @@
             โทนรุ้ง ใช้ง่าย ไม่เป็นพิษต่อสิ่งแวดล้อม ไม่มี Cr6 บำบัดน้ำทิ้งได้ สีออกฟ้า–เขียว/เขียว/ม่วงฟ้าปนแดง
             ตามสภาพชิ้นงานและเวลาแช่ ทน White Rust ~144–196 ชม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/iridescent-passivation-on-zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="iridescent-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -243,7 +243,7 @@
             โทนเหลือง/รุ้ง ใกล้เคียง Cr6 Yellow แต่เป็น Cr3 ที่เป็นมิตรต่อสิ่งแวดล้อม ทน White Rust ~72–100 ชม.
             อบ 120°C ช่วยเพิ่มความทนได้อีก.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/yellow-passivation-on-zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="yellow-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -256,7 +256,7 @@
           <p data-i18n-key="c6_blue_d">
             ผงโครเมตชนิด Cr6 ปรับบำรุงอ่างง่าย pH เสถียร ให้ฟ้าอมขาว เพิ่มความฟ้าได้ด้วยสีย้อม ทน White Rust >48 ชม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/troubleshootinghexavalentchromeblue" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootinghexavalentchromeblue.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -269,7 +269,7 @@
           <p data-i18n-key="c6_black_d">
             ผิวดำเงา ใช้ได้ทั้งแขวน/กลิ้ง ออโต้/แมนนวล คุมง่ายด้วยไตเตรตช่วงทำงานกว้าง ทน White Rust ~240–288 ชม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/troubleshootinghexavalentchromeblack" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootinghexavalentchromeblack.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -282,7 +282,7 @@
           <p data-i18n-key="c6_yellow_d">
             ใช้ปริมาณน้อย ดูแลง่าย ปรับความเข้มสีด้วยน้ำ/สีย้อม ให้โทนเหลืองรุ้ง ทน White Rust ≥72 ชม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/yellow-6-passivation-on-zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="yellow-6-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -296,7 +296,7 @@
             โทนเขียว Olive Drab อมเข้ม ให้ความทนกัดกร่อนสูง ใช้ได้ทั้งแขวน/กลิ้ง และเป็นไพรเมอร์ก่อนพ่นสีได้ดี
             ทน White Rust ~240–288 ชม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation/olive-6-passivation-on-zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="olive-6-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
