--- a/polishing.html
+++ b/polishing.html
@@ -57,11 +57,11 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/home/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
-      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/home/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
-      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/home/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
-      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/home/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
-      {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/home/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
+      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
+      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
+      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
+      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
+      {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
     ]
   }
   </script>
@@ -194,7 +194,7 @@
           <div class="badge-row"><span class="badge">Electropolishing</span><span class="badge">Mirror Finish</span></div>
           <h3 data-i18n-key="st_title">สเตนเลส (Electropolishing)</h3>
           <p data-i18n-key="st_desc">ทำผิวเรียบลื่นเงากระจก ลดคม ตั้งค่ากระแสและอุณหภูมิได้กว้าง ผิวที่ได้ทนการกัดกร่อนและสะอาดพร้อมขั้นตอนถัดไป.</p>
-          <a class="more" href="https://www.baumechemical.com/home/polishing/stainless-electropolishing-solution" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="stainless-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -205,7 +205,7 @@
           <div class="badge-row"><span class="badge">Nitric-free</span><span class="badge">Low Fume</span></div>
           <h3 data-i18n-key="br_title">ทองเหลือง (Brass Polishing)</h3>
           <p data-i18n-key="br_desc">สูตรไร้กรดไนตริก ควันต่ำ คืนความเงางาม ลดคราบเขียว/สนิมแดง ใช้ได้ทั้งจุ่มและถังกลิ้ง พร้อมเข้าสู่ขั้นตอนชุบต่อได้ทันที.</p>
-          <a class="more" href="https://www.baumechemical.com/home/polishing/brass-electropolishing-solution" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="brass-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -216,7 +216,7 @@
           <div class="badge-row"><span class="badge">Hot Dip / Electro</span><span class="badge">Fast Shine</span></div>
           <h3 data-i18n-key="al_title">อะลูมิเนียม (Hot Dip / Electro)</h3>
           <p data-i18n-key="al_desc">ทั้งแบบจุ่มร้อนและอิเล็กโทรโพลิช ควบคุมได้ละเอียด เงาเร็ว ลบคราบ/หมองบนอะลูมิเนียมให้เรียบเนียนทนทาน.</p>
-          <a class="more" href="https://www.baumechemical.com/home/polishing/aluminum-electropolishing-solution" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="aluminum-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -227,7 +227,7 @@
           <div class="badge-row"><span class="badge">Brite Dip</span><span class="badge">Deburr</span></div>
           <h3 data-i18n-key="steel_title">เหล็ก (Brite Dip)</h3>
           <p data-i18n-key="steel_desc">ขจัดสนิม/รอยและทำผิวเหล็กให้เงาใสแบบกระจก ใช้งานง่าย ได้ผลเร็ว รองรับทั้งจุ่มและกระบวนการไฟฟ้า.</p>
-          <a class="more" href="https://www.baumechemical.com/home/polishing/steel-electropolishing-solution" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="steel-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -238,7 +238,7 @@
           <div class="badge-row"><span class="badge">Zinc/Lead</span><span class="badge">Restore Shine</span></div>
           <h3 data-i18n-key="zn_title">สังกะสีและตะกั่ว</h3>
           <p data-i18n-key="zn_desc">ล้างคราบตะกั่ว/ออกไซด์ คืนความเงาสดใส ลดความขรุขระของผิว และเพิ่มความทนต่อการกัดกร่อนของชิ้นงาน.</p>
-          <a class="more" href="https://www.baumechemical.com/home/polishing/zinc-electropolishing-solution" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="zinc-electropolishing-solution.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
