--- a/protective.html
+++ b/protective.html
@@ -60,11 +60,11 @@
     "@context":"https://schema.org",
     "@type":"ItemList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/home/protective/antitarnish-for-copper"},
-      {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/home/protective/anti-tarnish-bu-186"},
-      {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/home/protective/anti-tarnish-bu-20"},
-      {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/home/protective/tin-anti-tarnish-b100"},
-      {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/home/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
+      {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/protective/antitarnish-for-copper"},
+      {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/protective/anti-tarnish-bu-186"},
+      {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/protective/anti-tarnish-bu-20"},
+      {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/protective/tin-anti-tarnish-b100"},
+      {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
     ]
   }
   </script>
@@ -197,7 +197,7 @@
             น้ำยาใสอมเหลือง ใช้เป็นบ่อสุดท้ายหลังชุบหรือหลังล้างเงา ช่วยไล่คราบน้ำ แห้งไว ไม่ทิ้งรอย
             สร้างฟิล์มใสป้องกันหมอง เหมาะงานอิเล็กทรอนิกส์/จิวเวลรี่ ทดสอบความชื้นได้ ~200 ชม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/protective/antitarnish-for-copper" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="antitarnish-for-copper.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -211,7 +211,7 @@
             เคมีเคลือบผิวสำหรับซิงค์ นิกเกิล โครม สแตนเลส ทอง เงิน ฯลฯ ช่วยไล่คราบน้ำ แห้งไว เคลือบป้องกันสนิมบริเวณไม่ได้ชุบ
             ฟิล์มยืดหยุ่น ทนทาน ไร้สารตะกั่ว ผิวสัมผัสปลอดภัย.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/protective/anti-tarnish-bu-186" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="anti-tarnish-bu-186.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -225,7 +225,7 @@
             สำหรับเงิน ทอง นิกเกิล ทองแดงและอัลลอยด์ เคลือบไฟฟ้าเพื่อล็อกสี ลดหมอง ช่วยแห้งไว
             เพิ่มความลื่นผิว ฟิล์มไม่ระคายเคืองผิวหนัง และไม่ก่อสีผิดเพี้ยน.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/protective/anti-tarnish-bu-20" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="anti-tarnish-bu-20.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -239,7 +239,7 @@
             น้ำยาป้องกันหมองบนผิวดีบุก ช่วยคงโทนสีเดิมได้ยาวนาน เพิ่มความทนผิว อ่างมีเสถียรภาพสูง
             อายุการเก็บนานนับปีโดยไม่เสื่อม.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/protective/tin-anti-tarnish-b100" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="tin-anti-tarnish-b100.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -253,7 +253,7 @@
             แลคเกอร์น้ำ เพิ่มความทนเค็มและกันหมอง ใช้กับซิงค์/อัลลอยด์ได้แม้ไม่โครเมต หรือทับบน Cr3/Cr6 ก็ได้
             โทนผิวไม่เพี้ยน เหมาะกับ Ni/Cr/Cu/Brass/SS/Al.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingelectrophoreticlacquer.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
