--- a/strippers.html
+++ b/strippers.html
@@ -195,7 +195,7 @@
             ลอกชั้นนิกเกิลออกจากผิวเหล็กโดยไม่ทำลายโลหะฐาน ระยะเวลาโดยทั่วไป 5–10 นาทีจนผิวกลายเป็นสีดำทั้งชิ้น
             จากนั้นจุ่มสารละลายโซเดียมไซยาไนด์ 15–60 วินาทีเพื่อล้างฟิล์มดำให้หลุดออกหมด (ขึ้นกับสภาพงาน).
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/strippers/stripper-steel" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="stripper-steel.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -209,7 +209,7 @@
             ลอกเฉพาะชั้นนิกเกิลโดยไม่ทำลายโลหะฐาน สูตรสำหรับทองแดงและทองเหลือง ใช้งานร่วมกับกรดซัลฟิวริก
             ประมาณ 5–10 นาทีหรือจนลอกหมด เหมาะสำหรับงานปรับแก้จุดและรีเวิร์ก.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/strippers/stripper-brass" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="stripper-brass.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -223,7 +223,7 @@
             ออกแบบมาสำหรับลอกชั้นนิกเกิลชุบไฟฟ้าบนเหล็ก โดยคงสภาพชิ้นงาน ใช้ได้กับชิ้นงานที่มีชั้นโลหะอื่นร่วม
             เช่น เงิน ทองแดง ดีบุก ทองเหลือง ฯลฯ สูตรคุมง่าย ใช้งานต่อเนื่องและบำบัดของเสียง่าย.
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/strippers/stripper-steel-electroplating" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="stripper-steel-electroplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
