add troubleshooting pages

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- === SEO Basics === -->
-  <title>ผลิตภัณฑ์เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน | Baume Chemical</title>
-  <meta name="description" content="เคมีงานชุบและการเตรียมผิวสำหรับอุตสาหกรรม: Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing พร้อมทีมเทคนิคและบริการหน้างานครบวงจร.">
+  <!-- SEO -->
+  <title>Baume Chemical | เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน</title>
+  <meta name="description" content="โซลูชันเคมีงานชุบและการเตรียมผิวครบวงจร: Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing พร้อมทีมเทคนิคและบริการหน้างาน.">
   <meta name="robots" content="index, follow, max-image-preview:large">
-  <link rel="canonical" href="index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/">
   <meta name="theme-color" content="#2c5e4e">
-  <meta property="og:locale" content="th_TH">
-  <meta property="og:locale:alternate" content="en_US">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="ผลิตภัณฑ์เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน | Baume Chemical">
-  <meta property="og:description" content="โซลูชันเคมีงานชุบครบวงจร พร้อมคำปรึกษาและทดสอบหน้างาน">
-  <meta property="og:url" content="https://www.baumechemical.com/products">
+  <meta property="og:title" content="Baume Chemical | เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน">
+  <meta property="og:description" content="โซลูชันเคมีงานชุบครบวงจร พร้อมทีมเทคนิคและบริการหน้างาน">
+  <meta property="og:url" content="https://www.baumechemical.com/">
   <meta property="og:image" content="https://i.imgur.com/3xwVLZZ.jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://i.imgur.com/3xwVLZZ.jpeg">
 
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
@@ -28,7 +29,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="https://i.imgur.com/3xwVLZZ.jpeg">
 
-  <!-- === Structured Data (JSON-LD) === -->
+  <!-- JSON-LD: Organization -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -39,15 +40,17 @@
     "sameAs":["https://line.me/ti/p/~baumechemical"]
   }
   </script>
+
+  <!-- JSON-LD: Home as WebPage -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
-    "@type":"CollectionPage",
-    "name":"ผลิตภัณฑ์ | Baume Chemical",
-    "url":"https://www.baumechemical.com/products",
+    "@type":"WebPage",
+    "name":"หน้าแรก | Baume Chemical",
+    "url":"https://www.baumechemical.com/",
     "inLanguage":"th",
     "isPartOf":{"@type":"WebSite","url":"https://www.baumechemical.com/","name":"Baume Chemical"},
-    "description":"รวมผลิตภัณฑ์เคมีงานชุบและการเตรียมผิว Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing"
+    "description":"โซลูชันเคมีงานชุบครบวงจร พร้อมทีมเทคนิคและบริการหน้างาน"
   }
   </script>
 
